@@ -4,7 +4,7 @@
 [#heading-2]
 == Heading 2
 
-[#heading-3]
+[#explicit-id]
 === Heading 3
 
 [#back-to-heading-2]
